metrics/network-policy-monitoring-allow-egress-prometheus-scrape-targets.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-allow-egress-prometheus-scrape-targets
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: prometheus-server
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8082
        - protocol: TCP
          port: 8083
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: clamav
      ports:
        - protocol: TCP
          port: 9906
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: connectivity-exporter
      ports:
        - protocol: TCP
          port: 9090
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dawarich
      ports:
        - protocol: TCP
          port: 9121
        - protocol: TCP
          port: 9187
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: bitwarden
      ports:
        - protocol: TCP
          port: 9187
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: db
      ports:
        - protocol: TCP
          port: 9104
        - protocol: TCP
          port: 9187
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: spotify
      ports:
        - protocol: TCP
          port: 8088
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: harbor
      ports:
        - protocol: TCP
          port: 8001
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: keycloak
      ports:
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9187
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 9153
        - protocol: TCP
          port: 9187
        - protocol: TCP
          port: 9964
    - to:
        - ipBlock:
            cidr: 192.168.1.0/24
      ports:
        - protocol: TCP
          port: 9963
        - protocol: TCP
          port: 9964
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gpu-operator
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 9400
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: loki
      ports:
        - protocol: TCP
          port: 3100
        - protocol: TCP
          port: 3500
        - protocol: TCP
          port: 9150
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: longhorn-system
      ports:
        - protocol: TCP
          port: 9500
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mail
      ports:
        - protocol: TCP
          port: 9121
        - protocol: TCP
          port: 11334
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mastodon
      ports:
        - protocol: TCP
          port: 9121
        - protocol: TCP
          port: 9187
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: matrix
      ports:
        - protocol: TCP
          port: 8008
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 3000
        - protocol: TCP
          port: 9090
        - protocol: TCP
          port: 9093
        - protocol: TCP
          port: 9100
        - protocol: TCP
          port: 10902
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud
      ports:
        - protocol: TCP
          port: 9980
        - protocol: TCP
          port: 9104
        - protocol: TCP
          port: 9121
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: seaweedfs
      ports:
        - protocol: TCP
          port: 9091
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 9093
        - protocol: TCP
          port: 9094
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 9100
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: unifi
      ports:
        - protocol: TCP
          port: 9130
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openbao
      ports:
        - protocol: TCP
          port: 8200
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: wordpress
      ports:
        - protocol: TCP
          port: 9090
        - protocol: TCP
          port: 9104
        - protocol: TCP
          port: 9121
